test/data/syntax-errors/bad-statement.gs
Str a = 7
givesUs a
